--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <center>
   <div class="col-xs-12 header_div text-center">
     <h2>Sound Controlled Aliens</h2>
-    <p>Note: Play different sounds like talking, clap, bubbling and clicking your tongue to make the aliens dance.</p>
+    <p>Note: Play different sounds like talking, clap, bubbling and banging to make the aliens dance.</p>
   </div>
   <div class="main_div"
       <center>
